# teres

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Gemfile  README.md  VISION.md  _config.yml  antora-local.yml  antora.yml  build.rs  index.md  install.bat  renovate.json
.github/: FUNDING.yml  renovate.json
.github/workflows/: ci.yml  docs.yml
docs/: antora.yml  configuration.md
docs/modules/ROOT/pages/: index.adoc
plugins/: filldrops.py  weighting.py
src/: blur.rs  cli.rs  config.rs  helpers.rs  main.rs  rendering.rs  script_handler.rs  teres.rs
tests/: cli.rs
