[package]
name = "teres"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/animafps/teres"
authors = ["Anima <contact@animafps.xyz>"]
license = "GPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
dirs = "4.0.0"
rand = "0.8.5" 
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
human-panic = "1.0.3"
rfd = "0.9.1"
indicatif = { version = "0.16.2", features = ["improved_unicode"] }
regex = "1.5.6"
ctrlc = "3.2.2"
winconsole = "0.11"
exitcode = "1.1.2"
clap-verbosity-flag = "2.0.0"
log = "0.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
ProductName = "Teres"