[package]
name = "teres"
description = ""
version = "0.3.3"
edition = "2021"
repository = "https://github.com/animafps/teres"
authors = ["Anima <contact@animafps.xyz>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
human-panic = "1.0"
rfd = "0.11"
indicatif = { version = "0.17", features = ["improved_unicode"] }
regex = "1.7"
ctrlc = "3.2"
winconsole = "0.11"
exitcode = "1.1"
clap-verbosity-flag = "2.0"
log = "0.4"
env_logger = "0.10"
wild = "2"
is-terminal = "0.4"
toml = "0.7"
rustsynth = { git = "https://github.com/animafps/rustsynth" }
rustsynth-derive = { path = "../rustsynth/rustsynth-derive" }
anyhow = "1.0"
num-rational = "0.4"

[build-dependencies]
clap_mangen = "0.2"
clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
ProductName = "Teres"
