[package]
version = "0.3.5"
name = "teres"
description = ""
edition = "2021"
repository = "https://github.com/animafps/teres"
authors = ["Anima <contact@animafps.xyz>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
dirs = "4.0.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
human-panic = "1.0.3"
rfd = "0.10.0"
indicatif = { version = "0.17.2", features = ["improved_unicode"] }
regex = "1.7.0"
ctrlc = "3.2.4"
winconsole = "0.11"
exitcode = "1.1.2"
clap-verbosity-flag = "2.0.0"
log = "0.4"
env_logger = "0.10.0"
wild = "2"
is-terminal = "0.4.2"
toml = "0.5"

[build-dependencies]
clap_mangen = "0.2"
clap = { version = "4.5.45", features = ["derive"] }
clap-verbosity-flag = "2.0.0"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.5"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
ProductName = "Teres"
